--- a/templates/acceuil_menu.html
+++ b/templates/acceuil_menu.html
@@ -32,7 +32,7 @@
           <br>
 
           <div class="card text-white ">
-            <img class="card-img" src="{% static 'images/fond.jpeg'%}" alt="" width="100%" height="350" alt="Card image">
+            <img class="card-img" src="{% static 'images/fond1.png'%}" alt="" width="100%" height="350" alt="Card image">
             <div class="card-img-overlay">
               <br> 
               <br>           
@@ -61,7 +61,6 @@
   </section>
   <section>
     <br>
-    <br>
     <!-- ########################################### -->
     <h2 class="text-center text-secondary" > Nos Services</h2>
 
@@ -71,7 +70,7 @@
 
           <center>
             <div class="col-md-12 mx-auto">
-              <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div id="myCarousel" class="carousel slide" data-bs-ride="carousel" >
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -104,7 +103,6 @@
                 </button>
               </center>
               <br>
-
                 
     <strong> Nous proposons :</strong> une gamme complète de produits Ivoiriens
     (Négocie sur des marchés règlementés ou de gré  à gré.
@@ -131,9 +129,9 @@
 
 <p class="" id="propos" style="   background-color:rgba(218, 206, 144, 0.741)"> Adama Dosso a été pendent 35 ans en Europe ou a acquis  un diplôme d’école 
 Supérieur en Marketing auprès de
-◦ L’institut MIP. Politecnico Milan 2009…. A Milan  Il a  développe  son agenda 
+◦L’institut MIP◦ Politecnico Milan 2009…. A Milan Il a  développé  son agenda 
 avec Sociétés Commerciales, industries, génie civil   Et autres. À  contacts  professionnels 
-Avec les chambres de  commerces dans les régions  industrialisées  Italiennes comme ; Lombardie Friuli Vénétie Giulia Toscane Liguria  Lazio (Rome) et aussi avec ICE institut commerce Extérieur agence de l’état Italien.
+avec les chambres de  commerces dans les régions  industrialisées  Italiennes comme ; Lombardie Friuli Vénétie Giulia Toscane Liguria  Lazio (Rome) et aussi avec ICE institut commerce Extérieur agence de l’état Italien.
 Adama Dosso a développé ses connaissances dans l’agro-industrie 
 Dans le dépt de Friuli  région italienne qui exporte Blé  Maiis et autre céréales dans
 La communauté Européenne et  pays des Balkans. 
@@ -207,7 +205,7 @@ En moyen orient Dubai auprès du bureau de conseil pour le génie civil dépts I
                 <p>
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-envelope" viewBox="0 0 20 20">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-                  </svg>agencedosso@gmail.com 
+                  </svg>agencedosso9@gmail.com 
                 </p>
 
                 <p>
